[gd_scene load_steps=17 format=3 uid="uid://ceg6rbarwcvi8"]

[ext_resource type="Texture2D" uid="uid://ddk6fpjvc7tvt" path="res://Assets/Tiles/gridTileset.png" id="1_3by7s"]
[ext_resource type="Script" path="res://Scripts/Game/PuyoGame.gd" id="1_tfcgd"]
[ext_resource type="PackedScene" uid="uid://b526hnm8iba4l" path="res://Scenes/Objects/RedPuyo.tscn" id="2_m1opx"]
[ext_resource type="PackedScene" uid="uid://4b8n5t827yci" path="res://Scenes/Objects/BluePuyo.tscn" id="3_bow3m"]
[ext_resource type="PackedScene" uid="uid://4t300lgrkwhu" path="res://Scenes/Objects/GreenPuyo.tscn" id="4_fl7ps"]
[ext_resource type="AudioStream" uid="uid://qr8xesani6t3" path="res://Assets/Sounds/chain1.wav" id="5_hwduy"]
[ext_resource type="PackedScene" uid="uid://dvcfytgr321jq" path="res://Scenes/Objects/YellowPuyo.tscn" id="5_mwb1a"]
[ext_resource type="AudioStream" uid="uid://mwxcrh8yylc6" path="res://Assets/Sounds/chain2.wav" id="6_5l2rs"]
[ext_resource type="AudioStream" uid="uid://tvki8clelukf" path="res://Assets/Sounds/chain3.wav" id="7_x8yts"]
[ext_resource type="AudioStream" uid="uid://gmnfjf5to2nx" path="res://Assets/Sounds/chain4.wav" id="8_5sh6p"]
[ext_resource type="AudioStream" uid="uid://i48fl00ahthh" path="res://Assets/Sounds/chain5.wav" id="9_6u5m2"]
[ext_resource type="AudioStream" uid="uid://27mspu334ol5" path="res://Assets/Sounds/chain6.wav" id="10_8pul3"]
[ext_resource type="AudioStream" uid="uid://cg4mht1v1w3dy" path="res://Assets/Sounds/chain7plus.wav" id="11_4vtwm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3prtr"]
texture = ExtResource("1_3by7s")
texture_region_size = Vector2i(58, 59)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-29, -29, 29, -29, 29, 29, -29, 29)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-29, -29, 29, -29, 29, 29, -29, 29)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-29, -29, 29, -29, 29, 29, -29, 29)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-29, -29, 29, -29, 29, 29, -29, 29)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-29, -29, 29, -29, 29, 29, -29, 29)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-29, -29, 29, -29, 29, 29, -29, 29)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-29, -29, 29, -29, 29, 29, -29, 29)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_ip3n8"]
scenes/2/scene = ExtResource("3_bow3m")
scenes/3/scene = ExtResource("4_fl7ps")
scenes/4/scene = ExtResource("5_mwb1a")
scenes/5/scene = ExtResource("2_m1opx")

[sub_resource type="TileSet" id="TileSet_nr84w"]
tile_size = Vector2i(58, 58)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_3prtr")
sources/1 = SubResource("TileSetScenesCollectionSource_ip3n8")

[node name="PuyoGame" type="Node2D"]
script = ExtResource("1_tfcgd")
metadata/_edit_horizontal_guides_ = [-51.0]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(44, 45)
scale = Vector2(0.75, 0.75)
tile_set = SubResource("TileSet_nr84w")
format = 2
layer_0/name = "Grid"
layer_0/tile_data = PackedInt32Array(65535, 131072, 0, 131071, 131072, 0, 196607, 131072, 0, 262143, 131072, 0, 327679, 131072, 0, 393215, 131072, 0, 458751, 131072, 0, 524287, 131072, 0, 589823, 131072, 0, 655359, 131072, 0, 720895, 131072, 0, 786431, 131072, 0, -65536, 65536, 0, 0, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 196608, 0, -65535, 65536, 0, 1, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 196608, 0, -65534, 65536, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 786434, 196608, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 786435, 196608, 0, -65532, 65536, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 720900, 0, 0, 786436, 196608, 0, -65531, 65536, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, 720901, 0, 0, 786437, 196608, 0, 6, 262144, 0, 65542, 262144, 0, 131078, 262144, 0, 196614, 262144, 0, 262150, 262144, 0, 327686, 262144, 0, 393222, 262144, 0, 458758, 262144, 0, 524294, 262144, 0, 589830, 262144, 0, 655366, 262144, 0, 720902, 262144, 0, 851967, 196608, 1, 786438, 262144, 1, -1, 65536, 1, -65530, 131072, 1, 7, 131072, 0, 65543, 131072, 0, 65545, 327680, 1, 9, 262144, 0, 196618, 262144, 0, 262154, 262144, 0, 262152, 131072, 0, 196616, 327680, 0, 196615, 196608, 1, 131079, 131072, 0, 65546, 131072, 1, 131082, 262144, 0, 327689, 196608, 0, -65528, 65536, 0, -65529, 65536, 1, -65527, 131072, 1, 327688, 196608, 1, 327690, 262144, 1, 2, 0, 0, 65539, 0, 0, 3, 0, 0, -65533, 65536, 0, 262146, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 262145, 0, 0, 196609, 0, 0, 131073, 0, 0, 65537, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0)
layer_1/name = "Puyos"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(524288, 1, 196608, 589824, 1, 131072, 655360, 1, 327680, 327681, 1, 131072, 393217, 1, 196608, 458753, 1, 262144, 524289, 1, 196608, 589825, 1, 131072, 655361, 1, 327680, 524290, 1, 196608, 589826, 1, 131072, 655362, 1, 327680, 65536, 1, 262144, 458752, 1, 262144, 262145, 1, 327680, 458754, 1, 262144)

[node name="PoppingTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ChainSoundEffects" type="Node" parent="."]

[node name="Chain1" type="AudioStreamPlayer" parent="ChainSoundEffects"]
stream = ExtResource("5_hwduy")

[node name="Chain2" type="AudioStreamPlayer" parent="ChainSoundEffects"]
stream = ExtResource("6_5l2rs")

[node name="Chain3" type="AudioStreamPlayer" parent="ChainSoundEffects"]
stream = ExtResource("7_x8yts")

[node name="Chain4" type="AudioStreamPlayer" parent="ChainSoundEffects"]
stream = ExtResource("8_5sh6p")

[node name="Chain5" type="AudioStreamPlayer" parent="ChainSoundEffects"]
stream = ExtResource("9_6u5m2")

[node name="Chain6" type="AudioStreamPlayer" parent="ChainSoundEffects"]
stream = ExtResource("10_8pul3")

[node name="Chain7plus" type="AudioStreamPlayer" parent="ChainSoundEffects"]
stream = ExtResource("11_4vtwm")

[connection signal="timeout" from="PoppingTimer" to="." method="_on_popping_timer_timeout"]
